--- a/Taller2/roles/mariadb/tasks/main.yaml
+++ b/Taller2/roles/mariadb/tasks/main.yaml
@@ -8,7 +8,7 @@
   mysql_db: name={{ bd_name }} state=present
 
 - name: Crear usuario para la base de datos wordpress
-  mysql_user: name={{ bd_user }} host={{ item }} password={{ bd_pass }} priv={{ bd_user }}.*:ALL,GRANT
+  mysql_user: name={{ bd_user }} host={{ item }} password={{ bd_pass }} priv={{ bd_name }}.*:ALL,GRANT
   with_items:
     - localhost
 
